# PrintLayout

./: .gitignore  CANVAS_IMAGE_FINDINGS.md  CHANGELOG.md  Cargo.toml  GEMINI.md  INSTALL.md  Makefile  PHASE5_SUMMARY.md  README.md  USAGE.md  gui_upgrade.md  project_plan.md  scope.md  status.md  upgrade_plan.md
.github/workflows/: ci.yml  release-rpm.yml
assets/: print-layout.desktop
packaging/rpm/: print-layout.spec
src/: canvas.rs  canvas_widget.rs  config.rs  layout.rs  lib.rs  main.rs  printing.rs  state.rs  ui.rs
